# telemetrydeck-wasm

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  propose_design.md
.github/workflow/: tests.yml
.github/workflows/: lint.yml  tests.yml
example/: Cargo.toml  README.md
example/src/: main.rs
examples/cli/: Cargo.toml  README.md
examples/cli/src/: main.rs
examples/yew/: Cargo.toml  README.md  index.html
examples/yew/src/: main.rs
src/: client_native.rs  client_wasm.rs  core.rs  lib.rs  params.rs  signals.rs  telemetry.rs
