[package]
name = "telemetrydeck-yew-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
telemetrydeck-wasm = { path = "../..", features = ["wasm"] }
